fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@ section {
   justify-content: space-around;
 }
 .container {
-  margin: 0 auto;
   max-width: 45ch;
 }
 figure {
